--- a/css/styles.css
+++ b/css/styles.css
@@ -116,8 +116,8 @@ a:hover{
     background-image: -ms-linear-gradient(top, #11cdd4, #11999e);
     background-image: -o-linear-gradient(top, #11cdd4, #11999e);
     background-image: linear-gradient(to bottom, #11cdd4, #11999e);
-    -webkit-border-radius: 8;
-    -moz-border-radius: 8;
+    border-radius: 8;
+    border-radius: 8;
     border-radius: 8px;
     font-family: Arial;
     color: #ffffff;
@@ -128,10 +128,10 @@ a:hover{
   
 .btn:hover {
     background: #30e3cb;
-    background-image: -webkit-linear-gradient(top, #30e3cb, #2bc4ad);
-    background-image: -moz-linear-gradient(top, #30e3cb, #2bc4ad);
-    background-image: -ms-linear-gradient(top, #30e3cb, #2bc4ad);
-    background-image: -o-linear-gradient(top, #30e3cb, #2bc4ad);
+    background-image: linear-gradient(top, #30e3cb, #2bc4ad);
+    background-image: linear-gradient(top, #30e3cb, #2bc4ad);
+    background-image: linear-gradient(top, #30e3cb, #2bc4ad);
+    background-image: linear-gradient(top, #30e3cb, #2bc4ad);
     background-image: linear-gradient(to bottom, #30e3cb, #2bc4ad);
     text-decoration: none;
 }
