--- a/css/styles.css
+++ b/css/styles.css
@@ -111,10 +111,10 @@ a:hover{
 
 .btn {
     background: #11cdd4;
-    background-image: -webkit-linear-gradient(top, #11cdd4, #11999e);
-    background-image: -moz-linear-gradient(top, #11cdd4, #11999e);
-    background-image: -ms-linear-gradient(top, #11cdd4, #11999e);
-    background-image: -o-linear-gradient(top, #11cdd4, #11999e);
+    background-image: linear-gradient(top, #11cdd4, #11999e);
+    background-image: linear-gradient(top, #11cdd4, #11999e);
+    background-image: linear-gradient(top, #11cdd4, #11999e);
+    background-image: linear-gradient(top, #11cdd4, #11999e);
     background-image: linear-gradient(to bottom, #11cdd4, #11999e);
     border-radius: 8;
     border-radius: 8;
